CrypsisB3: language strings missing in back-end #3653

--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -677,6 +677,67 @@ COM_KUNENA_A_TEMPLATE_MANAGER_FEATURES="Features"
 COM_KUNENA_A_TEMPLATE_MANAGER_BBCODE="BBcode"
 COM_KUNENA_A_TEMPLATE_MANAGER_COLORS="Colors"
 COM_KUNENA_A_TEMPLATE_MANAGER_AVATARS="Avatars"
+COM_KUNENA_GEN_CATEGORY = "Category"
+COM_KUNENA_GEN_MESSAGE = "Message"
+COM_KUNENA_GEN_SUBJECT = "Subject"
+COM_KUNENA_GEN_AUTHOR = "Author"
+COM_KUNENA_EDITOR_EMOTICONS_LABEL = "Emoticons"
+COM_KUNENA_TOPICLIST_AUTHOR_LABEL = "Author"
+COM_KUNENA_EDITOR_SMILIES = "Smilies"
+COM_KUNENA_EDITOR_HELPLINE_SMILIES = "Select a smiley in the list below or use emojis in the textarea"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Lightbox color"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "Select the Lightbox color"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "White"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Black"
+COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Message title length"
+COM_KUNENA_TEMPLATE_DISPLAY_MENU = "Show menu"
+COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC = "Show menu on the forum"
+COM_KUNENA_TEMPLATE_DISPLAY_MODULE="Display modules"
+COM_KUNENA_TEMPLATE_DISPLAY_MODULE_DESC="Display modules on the forum"
+COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB="Display breadcrumbs"
+COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB_DESC="Display breadcrumbs on the forum"
+COM_KUNENA_TEMPLATE_DISPLAY_ANNOUNCEMENT="Show announcements"
+COM_KUNENA_TEMPLATE_DISPLAY_ANNOUNCEMENT_DESC="Show announcements on the forum"
+COM_KUNENA_TEMPLATE_DISPLAY_FOOTER="Display footer"
+COM_KUNENA_TEMPLATE_DISPLAY_FOOTER_DESC="Display the footer on the forum"
+COM_KUNENA_TEMPLATE_DISPLAY_VIDEO = "Show video"
+COM_KUNENA_TEMPLATE_DISPLAY_VIDEO_DESC = "Show video on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_MAPS = "Show maps"
+COM_KUNENA_TEMPLATE_DISPLAY_MAPS_DESC = "Show maps on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS = "Show emoticons"
+COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS_DESC = "Show emoticons on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_TWITTER = "Show twitter"
+COM_KUNENA_TEMPLATE_DISPLAY_TWITTER_DESC = "Show twitter on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_EBAY = "Show ebay"
+COM_KUNENA_TEMPLATE_DISPLAY_EBAY_DESC = "Show ebay on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_LINK = "Show link"
+COM_KUNENA_TEMPLATE_DISPLAY_LINK_DESC = "Show link on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_PICTURE = "Show picture"
+COM_KUNENA_TEMPLATE_DISPLAY_PICTURE_DESC = "Show picture on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_HIDE = "Show hide"
+COM_KUNENA_TEMPLATE_DISPLAY_HIDE_DESC = "Show hide on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_SPOILER = "Show spoiler"
+COM_KUNENA_TEMPLATE_DISPLAY_SPOILER_DESC = "Show spoiler on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_TABLE = "Show table"
+COM_KUNENA_TEMPLATE_DISPLAY_TABLE_DESC = "Show table on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_CODE = "Show code"
+COM_KUNENA_TEMPLATE_DISPLAY_CODE_DESC = "Show code on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_QUOTE = "Show quote"
+COM_KUNENA_TEMPLATE_DISPLAY_QUOTE_DESC = "Show quote on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER = "Show divider"
+COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER_DESC = "Show divider on editor"
+COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title length in message"
+COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_LABEL="Category Image Path"
+COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_DESC="Category Image Path. If you set the path as category_images, the full path will be your_html_rootfolder/media/kunena/category_images/"
+COM_KUNENA_TEMPLATE_RECOVER="Recover crash and store fields"
+COM_KUNENA_TEMPLATE_RECOVER_DESC="This will remember the data from your messages, on crashes or move data from quickreply to editor"
+COM_KUNENA_TEMPLATE_DEFAULT_ICON="Default category icon"
+COM_KUNENA_TEMPLATE_DEFAULT_ICON_DESC="Default category icon, default is icon-folder"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS="Select color for categories icons"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_DESC="Select color for categories icons"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW="Select color for NEW icon and text"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW_DESC="Select color for NEW icon and text"
+COM_KUNENA_EDITOR_TAB_WRITE_LABEL="Write"
 
 ; JROOT/administrator/components/com_kunena/views/templates/tmpl/editcss.php
 
