Add the possibility to generate report configuration in anonymous way

--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -1,4 +1,4 @@
-﻿; Kunena Forum translation
+; Kunena Forum translation
 ;
 ; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
@@ -24,6 +24,8 @@ COM_KUNENA_EMOTICONS_EMOTICON_MANAGER="Emoticons"
 COM_KUNENA_GEN_DELETE="Delete"
 COM_KUNENA_RANKS="Rank Title:"
 COM_KUNENA_REPORT_SYSTEM="Report Configuration"
+COM_KUNENA_REPORT_SYSTEM_COMPLETE="Report Configuration"
+COM_KUNENA_REPORT_SYSTEM_ANONYMOUS="Report Configuration Anonymous"
 COM_KUNENA_STATS_GEN_STATS="General Statistics"
 COM_KUNENA_TRASH_AUTHOR_USERID="User Id"
 COM_KUNENA_TRASH_IP="IP"
@@ -589,7 +591,8 @@ COM_KUNENA_A_RANKS_UPLOAD="Upload New Rank Image"
 ; JROOT/administrator/components/com_kunena/views/report/tmpl/default.php
 
 COM_KUNENA_REPORT_SELECT_ALL="Select all and copy"
-COM_KUNENA_REPORT_SYSTEM_DESC="The Kunena reporting system helps moderators on the Kunena support forum better understand your setup when you're troubleshooting. Paste the contents of this field in your post when requesting help on the support forum."
+COM_KUNENA_REPORT_SYSTEM_COMPLETE_DESC="The Kunena reporting system helps moderators on the Kunena support forum better understand your setup when you're troubleshooting. Paste the contents of this field in your post when requesting help on the support forum."
+COM_KUNENA_REPORT_SYSTEM_ANONYMOUS_DESC = "The Kunena reporting system anonymous helps moderators on the Kunena support forum better understand your setup when you're troubleshooting. Paste the contents of this field in your post when requesting help on the support forum."
 
 ; JROOT/administrator/components/com_kunena/views/smilies/tmpl/
 
