--- a/src/components/com_kunena/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
@@ -299,6 +299,8 @@ COM_KUNENA_ACCESS_ALLOWED_CREATETOPIC="to create new topic."
 COM_KUNENA_ACCESS_ALLOWED_REPLY=" to reply."
 COM_KUNENA_ACCESS_ALLOWED_ADDATTACH="to add attachements."
 COM_KUNENA_ACCESS_ALLOWED_EDITPOST="to edit your message."
+COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_LABEL="Category Image Path"
+COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_DESC="Category Image Path. If you set the path as category_images, the full path will be your_html_rootfolder/media/kunena/category_images/"
 
 ; Removed strings
 
