Implement 5 star Rating in Crypsis #981

--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
@@ -569,6 +569,13 @@ COM_KUNENA_TEMPLATE_LEGEND_USER_DESC = "Legend color for Users."
 COM_KUNENA_TEMPLATE_MIRAGE_TEMPLATE_DESC = "This is new template for Kunena 2.0."
 COM_KUNENA_TEMPLATE_TABS = "Tabs"
 
+ ; Rating
+COM_KUNENA_TOPIC_RATING_ROCKS = "Great"
+COM_KUNENA_TOPIC_RATING_PRETTYGOOD = "Good"
+COM_KUNENA_TOPIC_RATING_MEH = "Medium"
+COM_KUNENA_TOPIC_RATING_KINDABAD = "Bad"
+COM_KUNENA_TOPIC_RATING_SUCKS = "Very bad"
+
 ; Removed strings
 
 COM_KUNENA_BUTTON_UNSUBSCRIBE_CATEGORY = "Unsubscribe"
