Announcements will not published with selected date #3459

--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
@@ -41,6 +41,8 @@ COM_KUNENA_ANN_LONGTEXT = "Long Text"
 COM_KUNENA_ANN_PUBLISH = "Publish"
 COM_KUNENA_ANN_READMORE = "Read More..."
 COM_KUNENA_ANN_SHOWDATE = "Show Date"
+COM_KUNENA_ANN_DATE_UP = "Publish Date"
+COM_KUNENA_ANN_DATE_DOWN = "Unpublish Date"
 COM_KUNENA_ANN_SORTTEXT = "Short Text"
 COM_KUNENA_ANN_TITLE = "Title"
 COM_KUNENA_ATTACHMENTS = "Attachments:"
