Follow category setting allow_ratings to display stars on a topic

--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -96,6 +96,8 @@ COM_KUNENA_A_CATEGORY_CFG_OPTION_CATEGORY="Up to Category Level"
 COM_KUNENA_A_CATEGORY_CFG_OPTION_SUBCATEGORY="Up to Sub-Category Level"
 COM_KUNENA_ICON="Category Icon:"
 COM_KUNENA_ICON_DESC="Enter here the class for your icon. Example <strong>icon-home</strong>"
+COM_KUNENA_RATING_CATEGORIES_ALLOWED = "Allow rating"
+COM_KUNENA_RATING_CATEGORIES_ALLOWED_DESC = "Allow rating vote into this category"
 
 ; JROOT/administrator/components/com_kunena/views/categories/tmpl/default.php
 
@@ -520,6 +522,8 @@ COM_KUNENA_ALLOW_CHANGE_SUBJECT_REPLIES_LABEL="Allow to let user to change subje
 COM_KUNENA_ALLOW_CHANGE_SUBJECT_REPLIES_DESC="Allow to let user to change subject on replies"
 COM_KUNENA_A_BOARD_READONLY="Read Only Mode"
 COM_KUNENA_A_BOARD_READONLY_DESC="Allow users only to read messages"
+COM_KUNENA_CONFIGURATION_RATING_ENABLED = "Allow rating"
+COM_KUNENA_CONFIGURATION_RATING_DESC = "Allow rating on topics, you need to allow too into categories settings"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
