--- a/src/components/com_kunena/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
@@ -305,6 +305,7 @@ COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_DESC="Category Image Path. If you set the
 COM_KUNENA_RATE_LOGIN = "You need to be logged to add rate"
 COM_KUNENA_RATE_NOT_YOURSELF = "You cannot rate yourself"
 COM_KUNENA_RATE_ALLREADY = "You have already gived a rate"
+COM_KUNENA_RATE_SUCCESSFULLY_SAVED = "The star has been successfully saved"
 
 ; Removed strings
 
