--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.libraries.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.libraries.ini
@@ -52,6 +52,7 @@ COM_KUNENA_LIB_BBCODE_EBAY_LABEL_BUY_IT_NOW="Buy It Now"
 COM_KUNENA_LIB_BBCODE_EBAY_LABEL_COMPLETED="Completed"
 COM_KUNENA_LIB_BBCODE_EBAY_ERROR_WRONG_ITEM_ID="The ebay item id given is invalid, no result has been sent"
 COM_KUNENA_LIB_BBCODE_EBAY_INVALID_APPID_KEY="You haven't set a correct eBay AppID key in Kunena configuration settings, please clear cache before to retry"
+COM_KUNENA_LIB_BBCODE_EBAY_ERROR_NO_EBAY_APP_ID = "No eBay APP ID défined in Kunena configuration" 
 COM_KUNENA_LIB_BBCODE_TWITTER_COULD_NOT_GET_TOKEN="Could not retrieve bearer token (consumer)"
 COM_KUNENA_LIB_BBCODE_TWITTER_INVALID_TWEET_ID="The tweet ID given is invalid"
 COM_KUNENA_LIB_BBCODE_TWITTER_CONSUMMER_KEY_SECRET_INVALID="Invalid consumer key/secret in configuration"
