Check if title of topic or message contains URL to limit spam

--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -524,6 +524,8 @@ COM_KUNENA_A_BOARD_READONLY="Read Only Mode"
 COM_KUNENA_A_BOARD_READONLY_DESC="Allow users only to read messages"
 COM_KUNENA_CONFIGURATION_RATING_ENABLED = "Allow rating"
 COM_KUNENA_CONFIGURATION_RATING_DESC = "Allow rating on topics, you need to allow too into categories settings"
+COM_KUNENA_ADMIN_CONFIG_URL_SUBJECT = "Prevent posting topic or reply with URL in title"
+COM_KUNENA_ADMIN_CONFIG_URL_SUBJECT_DESC = "Prevent posting topic or reply with URL in title to limit some spam messages"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
