Add users avatar into who is online next to usersename #3443

--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
@@ -367,6 +367,12 @@ COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE_MULTIPLES="This message has attachments file
 COM_KUNENA_SHOWIMGFORGUEST_HIDEIMG_SIMPLE="This message has an attachment image.<br /> Please log in or register to see it."
 COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE_SIMPLE="This message has an attachment file.<br /> Please log in or register to see it."
 COM_KUNENA_AUP_MEDALS = "Medals:"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME="Whoisonline"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_DESC="How to show Whoisonline users"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_NAME="Name"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_AVATAR="Avatar"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_BOTH="Both"
+
 
 ; Automatically generated strings for COM_KUNENA_MYPROFILE_*
 
