--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.ini
@@ -295,3 +295,4 @@ COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
 COM_KUNENA_PROFILE_SAVED_BY_MODERATOR="Profile saved."
 COM_KUNENA_POST_ATTACHMENTS_IMAGE_ONLY_FOR_MODERATORS="Posting image files is allowed only for moderators"
+COM_KUNENA_TEAM_MEMBER="Team Member"
