--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
@@ -358,6 +358,7 @@ COM_KUNENA_A_TEMPLATE_MANAGER_TOPICICONS="Topic Icons"
 COM_KUNENA_A_TEMPLATE_MANAGER_TOPICICONS_DESC="Enable topicons css"
 COM_KUNENA_TEMPLATE_DISPLAY_FONTAWESOME="Load External CDN Fontawesome"
 COM_KUNENA_TEMPLATE_DISPLAY_FONTAWESOME_DESC="Load External CDN Fontawesome"
+COM_KUNENA_TEMPLATE_NONE="Normal"
 COM_KUNENA_TEMPLATE_NORMAL="Default"
 COM_KUNENA_TEMPLATE_BOOTSTRAP2="Bootstrap 2"
 COM_KUNENA_TEMPLATE_BOOTSTRAP3="Bootstrap 3"
