--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
@@ -373,7 +373,8 @@ COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_DESC="How to show Whoisonline users"
 COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_NAME="Name"
 COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_AVATAR="Avatar"
 COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_BOTH="Both"
-
+COM_KUNENA_TEMPLATE_LOAD_BOOTSTRAP="Load Bootstrap css"
+COM_KUNENA_TEMPLATE_LOAD_BOOTSTRAP_DESC="Load Bootstrap css for none Bootstrap templates"
 
 ; Automatically generated strings for COM_KUNENA_MYPROFILE_*
 
