--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
@@ -375,6 +375,12 @@ COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_AVATAR="Avatar"
 COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_BOTH="Both"
 COM_KUNENA_TEMPLATE_LOAD_BOOTSTRAP="Load Bootstrap css"
 COM_KUNENA_TEMPLATE_LOAD_BOOTSTRAP_DESC="Load Bootstrap css for none Bootstrap templates"
+COM_KUNENA_TEMPLATE_DISPLAY_WRITEACCESS="Write Access"
+COM_KUNENA_TEMPLATE_DISPLAY_WRITEACCESS_DESC="Show the access rights on the bottom of the topics"
+COM_KUNENA_TEMPLATE_DISPLAY_INSTAGRAM="Show Instagram"
+COM_KUNENA_TEMPLATE_DISPLAY_INSTAGRAM_DESC="Show Instagram"
+COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD="Show Soundcloud"
+COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD_DESC="Show Soundcloud"
 
 ; Automatically generated strings for COM_KUNENA_MYPROFILE_*
 
@@ -576,15 +582,84 @@ COM_KUNENA_TEMPLATE_LEGEND_MODERATOR_COLOR = "Moderator color"
 COM_KUNENA_TEMPLATE_LEGEND_MODERATOR_DESC = "Legend color for Moderators."
 COM_KUNENA_TEMPLATE_LEGEND_USER_COLOR = "User color"
 COM_KUNENA_TEMPLATE_LEGEND_USER_DESC = "Legend color for Users."
-COM_KUNENA_TEMPLATE_MIRAGE_TEMPLATE_DESC = "This is new template for Kunena 2.0."
 COM_KUNENA_TEMPLATE_TABS = "Tabs"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Lightbox color"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "Select the Lightbox color"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "White"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Black"
+COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Message title length"
+COM_KUNENA_TEMPLATE_DISPLAY_MENU = "Show menu"
+COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC = "Show menu on the forum"
+COM_KUNENA_TEMPLATE_DISPLAY_MODULE="Display modules"
+COM_KUNENA_TEMPLATE_DISPLAY_MODULE_DESC="Display modules on the forum"
+COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB="Display breadcrumbs"
+COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB_DESC="Display breadcrumbs on the forum"
+COM_KUNENA_TEMPLATE_DISPLAY_ANNOUNCEMENT="Show announcements"
+COM_KUNENA_TEMPLATE_DISPLAY_ANNOUNCEMENT_DESC="Show announcements on the forum"
+COM_KUNENA_TEMPLATE_DISPLAY_FOOTER="Display footer"
+COM_KUNENA_TEMPLATE_DISPLAY_FOOTER_DESC="Display the footer on the forum"
+COM_KUNENA_TEMPLATE_DISPLAY_VIDEO = "Show video"
+COM_KUNENA_TEMPLATE_DISPLAY_VIDEO_DESC = "Show video on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_MAPS = "Show maps"
+COM_KUNENA_TEMPLATE_DISPLAY_MAPS_DESC = "Show maps on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS = "Show emoticons"
+COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS_DESC = "Show emoticons on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_TWITTER = "Show twitter"
+COM_KUNENA_TEMPLATE_DISPLAY_TWITTER_DESC = "Show twitter on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_EBAY = "Show ebay"
+COM_KUNENA_TEMPLATE_DISPLAY_EBAY_DESC = "Show ebay on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_LINK = "Show link"
+COM_KUNENA_TEMPLATE_DISPLAY_LINK_DESC = "Show link on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_PICTURE = "Show picture"
+COM_KUNENA_TEMPLATE_DISPLAY_PICTURE_DESC = "Show picture on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_HIDE = "Show hide"
+COM_KUNENA_TEMPLATE_DISPLAY_HIDE_DESC = "Show hide on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_SPOILER = "Show spoiler"
+COM_KUNENA_TEMPLATE_DISPLAY_SPOILER_DESC = "Show spoiler on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_TABLE = "Show table"
+COM_KUNENA_TEMPLATE_DISPLAY_TABLE_DESC = "Show table on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_CODE = "Show code"
+COM_KUNENA_TEMPLATE_DISPLAY_CODE_DESC = "Show code on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_QUOTE = "Show quote"
+COM_KUNENA_TEMPLATE_DISPLAY_QUOTE_DESC = "Show quote on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER = "Show divider"
+COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER_DESC = "Show divider on editor"
+COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title length in message"
+COM_KUNENA_TEMPLATE_RECOVER="Recover crash and store fields"
+COM_KUNENA_TEMPLATE_RECOVER_DESC="This will remember the data from your messages, on crashes or move data from quickreply to editor"
+COM_KUNENA_TEMPLATE_DEFAULT_ICON="Default category icon"
+COM_KUNENA_TEMPLATE_DEFAULT_ICON_DESC="Default category icon, default is icon-folder"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS="Select color for categories icons"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_DESC="Select color for categories icons"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW="Select color for NEW icon and text"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW_DESC="Select color for NEW icon and text"
+COM_KUNENA_EDITOR_TAB_WRITE_LABEL="Write"
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE="Display Social Share"
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE_DESC="Needs fontawesome for the icons"
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALTHEME="Social Theme"
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALTHEME_DESC="Select the theme for social buttons"
+COM_KUNENA_CLASSIC="Classic"
+COM_KUNENA_FLAT="Flat"
+COM_KUNENA_MINIMA="Minima"
+COM_KUNENA_PLAIN="Plain"
+COM_KUNENA_ACCESS_ALLOWED="Allowed:"
+COM_KUNENA_ACCESS_NOTALLOWED="Not Allowed:"
+COM_KUNENA_ACCESS_ALLOWED_CREATETOPIC="to create new topic."
+COM_KUNENA_ACCESS_ALLOWED_REPLY=" to reply."
+COM_KUNENA_ACCESS_ALLOWED_ADDATTACH="to add attachements."
+COM_KUNENA_ACCESS_ALLOWED_EDITPOST="to edit your message."
+COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_LABEL="Category Image Path"
+COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_DESC="Category Image Path. If you set the path as category_images, the full path will be your_html_rootfolder/media/kunena/category_images/"
 
- ; Rating
-COM_KUNENA_TOPIC_RATING_ROCKS = "Great"
-COM_KUNENA_TOPIC_RATING_PRETTYGOOD = "Good"
-COM_KUNENA_TOPIC_RATING_MEH = "Medium"
-COM_KUNENA_TOPIC_RATING_KINDABAD = "Bad"
-COM_KUNENA_TOPIC_RATING_SUCKS = "Very bad"
+; JROOT/components/com_kunena/template/crypsis/template.xml
+
+COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND = "Forum Header Background"
+COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR = "Hover Tab Color"
+COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR_DESC = "Enter the color of the menu tab when hovered over."
+COM_KUNENA_TEMPLATE_SKINNER = "Blend with Joomla Template"
+COM_KUNENA_TEMPLATE_SKINNER_DESC = "Automatically blend the default template with the colors or you Joomla template."
+COM_KUNENA_TEMPLATE_TOGGLER_COLOR = "Toggler Color"
+COM_KUNENA_TEMPLATE_TOGGLER_COLOR_DESC = "Enter the color of the section toggler button."
 
 ; Removed strings
 
