More improvements on logging implementation

--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -1013,6 +1013,8 @@ COM_KUNENA_LOG_POST_EDIT = "Post Edited"
 COM_KUNENA_LOG_POST_MODERATE = "Post Moderated"
 COM_KUNENA_LOG_POST_REPORT = "Post Reported"
 COM_KUNENA_LOG_POST_UNDELETE = "Post Restored"
+COM_KUNENA_LOG_POST_THANKYOU = "Post Thank You"
+COM_KUNENA_LOG_POST_UNTHANKYOU = "Post Thank You Removed"
 COM_KUNENA_LOG_PRIVATE_POST_CREATE = "Secure Post Created"
 COM_KUNENA_LOG_PRIVATE_POST_DELETE = "Secure Post Deleted"
 COM_KUNENA_LOG_PRIVATE_POST_EDIT = "Secure Post Edited"
