Add missing loggin on topic and announcement

--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -990,7 +990,7 @@ COM_KUNENA_TOOLS_LABEL_UNINSTALL_SECRETKEY="Secret key"
 
 ; JROOT/administrator/components/com_kunena/views/logs
 
-COM_KUNENA_LOG_MANAGER = "Log Manager"
+COM_KUNENA_LOG_MANAGER = "Logs"
 COM_KUNENA_LOG_ANNOUNCEMENT_CREATE = "Announcement Created"
 COM_KUNENA_LOG_ANNOUNCEMENT_DELETE = "Announcement Deleted"
 COM_KUNENA_LOG_ANNOUNCEMENT_EDIT = "Announcement Edited"
@@ -1039,6 +1039,13 @@ COM_KUNENA_LOG_USER_EDIT = "User Edited"
 COM_KUNENA_LOG_USER_UNBAN = "User Unbanned"
 COM_KUNENA_LOG_USER_UNBLOCK = "User Unblocked"
 COM_KUNENA_LOG_USER_WARNING = "User Warning"
+COM_KUNENA_LOG_CALENDAR_PLACEHOLDER_START_DATE = "Enter the start date"
+COM_KUNENA_LOG_CALENDAR_PLACEHOLDER_END_DATE = "Enter the end date"
+COM_KUNENA_LOG_CLEAN_ENTRIES = "Clean entries"
+COM_KUNENA_CLEAN_LOGS_ENTRIES = "Clean"
+COM_KUNENA_LOG_CLEAN_DESC = "The clean log entries allow you to remove entries which are old from a specific days"
+COM_KUNENA_LOG_CLEAN_FROM = "Clean log entries from"
+COM_KUNENA_LOG_CLEAN_FROM_DAYS = "days"
 
 ; Removed strings
 
