Implemention of logging moderator actions into Kunena (#3803)

--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -988,6 +988,65 @@ COM_KUNENA_TOOLS_LABEL_UNINSTALL_PASSWORD="Password"
 COM_KUNENA_TOOLS_BUTTON_UNINSTALL_PROCESS="Execute the process"
 COM_KUNENA_TOOLS_LABEL_UNINSTALL_SECRETKEY="Secret key"
 
+; JROOT/administrator/components/com_kunena/views/logs
+
+COM_KUNENA_LOG_MANAGER = "Logs"
+COM_KUNENA_LOG_ANNOUNCEMENT_CREATE = "Announcement Created"
+COM_KUNENA_LOG_ANNOUNCEMENT_DELETE = "Announcement Deleted"
+COM_KUNENA_LOG_ANNOUNCEMENT_EDIT = "Announcement Edited"
+COM_KUNENA_LOG_ANNOUNCEMENT_PUBLISH = "Announcement Published"
+COM_KUNENA_LOG_ANNOUNCEMENT_UNPUBLISH = "Announcement Unpublished"
+COM_KUNENA_LOG_ATTACHMENT_CREATE = "Attachment Created"
+COM_KUNENA_LOG_ATTACHMENT_DELETE = "Attachment Deleted"
+COM_KUNENA_LOG_ERROR_ALERT = "ERROR (Alert)"
+COM_KUNENA_LOG_ERROR_CRITICAL = "ERROR (Critical)"
+COM_KUNENA_LOG_ERROR_EMERGENCY = "ERROR (Emergency)"
+COM_KUNENA_LOG_ERROR_FATAL = "FATAL ERROR"
+COM_KUNENA_LOG_ERROR_GENERAL = "ERROR (General)"
+COM_KUNENA_LOG_IMAGE_ATTACHMENT_RESIZE = "Resize Attachment"
+COM_KUNENA_LOG_IMAGE_AVATAR_RESIZE = "Resize Avatar"
+COM_KUNENA_LOG_POST_APPROVE = "Post Approved"
+COM_KUNENA_LOG_POST_CREATE = "Post Created"
+COM_KUNENA_LOG_POST_DELETE = "Post Deleted"
+COM_KUNENA_LOG_POST_DESTROY = "Post Destroyed"
+COM_KUNENA_LOG_POST_EDIT = "Post Edited"
+COM_KUNENA_LOG_POST_MODERATE = "Post Moderated"
+COM_KUNENA_LOG_POST_REPORT = "Post Reported"
+COM_KUNENA_LOG_POST_UNDELETE = "Post Restored"
+COM_KUNENA_LOG_POST_THANKYOU = "Post Thank You"
+COM_KUNENA_LOG_POST_UNTHANKYOU = "Post Thank You Removed"
+COM_KUNENA_LOG_PRIVATE_POST_CREATE = "Secure Post Created"
+COM_KUNENA_LOG_PRIVATE_POST_DELETE = "Secure Post Deleted"
+COM_KUNENA_LOG_PRIVATE_POST_EDIT = "Secure Post Edited"
+COM_KUNENA_LOG_SHADOW_TOPIC_CREATE = "Shadow Topic Created"
+COM_KUNENA_LOG_SHADOW_TOPIC_DELETE = "Shadow Topic Deleted"
+COM_KUNENA_LOG_TOPIC_APPROVE = "Topic Approved"
+COM_KUNENA_LOG_TOPIC_CREATE = "Topic Created"
+COM_KUNENA_LOG_TOPIC_DELETE = "Topic Deleted"
+COM_KUNENA_LOG_TOPIC_DESTROY = "Topic Destroyed"
+COM_KUNENA_LOG_TOPIC_EDIT = "Topic Edited"
+COM_KUNENA_LOG_TOPIC_ICON = "Topic Icon Changed"
+COM_KUNENA_LOG_TOPIC_LOCK = "Topic Locked"
+COM_KUNENA_LOG_TOPIC_MODERATE = "Topic Moderated"
+COM_KUNENA_LOG_TOPIC_REPORT = "Topic Reported"
+COM_KUNENA_LOG_TOPIC_STICKY = "Topic Stickied"
+COM_KUNENA_LOG_TOPIC_UNDELETE = "Topic Restored"
+COM_KUNENA_LOG_TOPIC_UNLOCK = "Topic Unlocked"
+COM_KUNENA_LOG_TOPIC_UNSTICKY = "Topic Unstickied"
+COM_KUNENA_LOG_USER_BAN = "User Banned"
+COM_KUNENA_LOG_USER_BLOCK = "User Blocked"
+COM_KUNENA_LOG_USER_EDIT = "User Edited"
+COM_KUNENA_LOG_USER_UNBAN = "User Unbanned"
+COM_KUNENA_LOG_USER_UNBLOCK = "User Unblocked"
+COM_KUNENA_LOG_USER_WARNING = "User Warning"
+COM_KUNENA_LOG_CALENDAR_PLACEHOLDER_START_DATE = "Enter the start date"
+COM_KUNENA_LOG_CALENDAR_PLACEHOLDER_END_DATE = "Enter the end date"
+COM_KUNENA_LOG_CLEAN_ENTRIES = "Clean entries"
+COM_KUNENA_CLEAN_LOGS_ENTRIES = "Clean"
+COM_KUNENA_LOG_CLEAN_DESC = "The clean log entries allow you to remove entries which are old from a specific days"
+COM_KUNENA_LOG_CLEAN_FROM = "Clean log entries from"
+COM_KUNENA_LOG_CLEAN_FROM_DAYS = "days"
+
 ; Removed strings
 
 COM_KUNENA_TRASH_LAST_MESSAGE="Last Message"
