--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -1047,6 +1047,18 @@ COM_KUNENA_LOG_CLEAN_DESC = "The clean log entries allow you to remove entries w
 COM_KUNENA_LOG_CLEAN_FROM = "Clean log entries from"
 COM_KUNENA_LOG_CLEAN_FROM_DAYS = "days"
 
+; JROOT/administrator/components/com_kunena/views/statistics
+
+COM_KUNENA_STATISTICS_START_DATE = "Enter the start date"
+COM_KUNENA_STATISTICS_END_DATE = "Enter the end date"
+COM_KUNENA_STATISTICS_NAME = "Name"
+COM_KUNENA_STATISTICS_USERNAME = "Username"
+COM_KUNENA_STATISTICS_POSTS = "Posts"
+COM_KUNENA_STATISTICS_MOVES = "Moves"
+COM_KUNENA_STATISTICS_EDITS = "Edits"
+COM_KUNENA_STATISTICS_DELETES = "Deletes"
+COM_KUNENA_STATISTICS_THANK_YOU = "Thank You"
+
 ; Removed strings
 
 COM_KUNENA_TRASH_LAST_MESSAGE="Last Message"
