Missing strings on backend #3828

--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -526,6 +526,7 @@ COM_KUNENA_CONFIGURATION_RATING_ENABLED = "Allow rating"
 COM_KUNENA_CONFIGURATION_RATING_DESC = "Allow rating on topics, you need to allow too into categories settings"
 COM_KUNENA_ADMIN_CONFIG_URL_SUBJECT = "Prevent posting topic or reply with URL in title"
 COM_KUNENA_ADMIN_CONFIG_URL_SUBJECT_DESC = "Prevent posting topic or reply with URL in title to limit some spam messages"
+COM_KUNENA_CFG_ACCESS_COMPONENT = "Direct Component Access"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
@@ -1046,6 +1047,9 @@ COM_KUNENA_CLEAN_LOGS_ENTRIES = "Clean"
 COM_KUNENA_LOG_CLEAN_DESC = "The clean log entries allow you to remove entries which are old from a specific days"
 COM_KUNENA_LOG_CLEAN_FROM = "Clean log entries from"
 COM_KUNENA_LOG_CLEAN_FROM_DAYS = "days"
+COM_KUNENA_LOG_POLL_MODERATE = "Moderate poll"
+COM_KUNENA_LOG_TOPIC_FAVORITE = "Favorite topic"
+COM_KUNENA_LOG_TOPIC_UNFAVORITE = "Unfavorite topic"
 
 ; JROOT/administrator/components/com_kunena/views/statistics
 
