--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -527,6 +527,8 @@ COM_KUNENA_CONFIGURATION_RATING_DESC = "Allow rating on topics, you need to allo
 COM_KUNENA_ADMIN_CONFIG_URL_SUBJECT = "Prevent posting topic or reply with URL in title"
 COM_KUNENA_ADMIN_CONFIG_URL_SUBJECT_DESC = "Prevent posting topic or reply with URL in title to limit some spam messages"
 COM_KUNENA_CFG_ACCESS_COMPONENT = "Direct Component Access"
+COM_KUNENA_CONFIGURATION_LOG_COLLECT_DATA = "Define if you want to log action or moderation"
+COM_KUNENA_CONFIGURATION_LOG_COLLECT_DATA_DESC = "Define if you want to log action or moderation from the forum"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
