Configuration -> Frontend -> Look and feel -> Recent Topics Time Period - Option "All" is not in the list #3840

--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.sys.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.sys.ini
@@ -70,6 +70,7 @@ COM_KUNENA_SHOW_MONTH="Month"
 COM_KUNENA_SHOW_WEEK="Week"
 COM_KUNENA_SHOW_YEAR="Year"
 COM_KUNENA_TOPLEVEL="Top Level"
+COM_KUNENA_SHOW_SELECT_ALL = "All"
 
 ; JROOT/components/com_kunena/views/category/metadata.xml
 
