--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
@@ -644,6 +644,16 @@ COM_KUNENA_ACCESS_ALLOWED_ADDATTACH="to add attachements."
 COM_KUNENA_ACCESS_ALLOWED_EDITPOST="to edit your message."
 COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_LABEL="Category Image Path"
 COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_DESC="Category Image Path. If you set the path as category_images, the full path will be your_html_rootfolder/media/kunena/category_images/"
+COM_KUNENA_LABELS_QUESTION="Question"
+COM_KUNENA_LABELS_IMPORTANT="Important"
+COM_KUNENA_LABELS_IDEA="Idea"
+COM_KUNENA_LABELS_LOVED="Loved"
+COM_KUNENA_LABELS_SOLVED="Solved"
+COM_KUNENA_LABELS_MERGED="Merged"
+COM_KUNENA_LABELS_DELETED="Deleted"
+COM_KUNENA_DISABLED="Disabled"
+COM_KUNENA_ENABLED_TOPIC="Topic id"
+COM_KUNENA_ENABLED_LABEL="Custom id"
 
 ; JROOT/components/com_kunena/template/crypsis/template.xml
 
