--- a/src/components/com_kunena/language/da-DK/da-DK.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/da-DK/da-DK.com_kunena.templates.ini
@@ -644,16 +644,16 @@ COM_KUNENA_ACCESS_ALLOWED_ADDATTACH="at tilføje vedhæftede filer."
 COM_KUNENA_ACCESS_ALLOWED_EDITPOST="at redigere din besked."
 COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_LABEL="Kategori billede sti"
 COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_DESC="Kategori billedesti. Hvis du har angivet stien som category_images, vil den fulde sti være your_html_rootfolder/media/kunena/category_images /"
-; COM_KUNENA_LABELS_QUESTION="Question"
-; COM_KUNENA_LABELS_IMPORTANT="Important"
-; COM_KUNENA_LABELS_IDEA="Idea"
-; COM_KUNENA_LABELS_LOVED="Loved"
-; COM_KUNENA_LABELS_SOLVED="Solved"
-; COM_KUNENA_LABELS_MERGED="Merged"
-; COM_KUNENA_LABELS_DELETED="Deleted"
-; COM_KUNENA_DISABLED="Disabled"
-; COM_KUNENA_ENABLED_TOPIC="Topic id"
-; COM_KUNENA_ENABLED_LABEL="Custom id"
+COM_KUNENA_LABELS_QUESTION="Spørgsmål"
+COM_KUNENA_LABELS_IMPORTANT="Vigtigt"
+COM_KUNENA_LABELS_IDEA="Idé"
+COM_KUNENA_LABELS_LOVED="Elskede"
+COM_KUNENA_LABELS_SOLVED="Løst"
+COM_KUNENA_LABELS_MERGED="Flettet"
+COM_KUNENA_LABELS_DELETED="Slettet"
+COM_KUNENA_DISABLED="Inaktiveret"
+COM_KUNENA_ENABLED_TOPIC="Emne-id"
+COM_KUNENA_ENABLED_LABEL="Brugerdefineret id"
 
 ; JROOT/components/com_kunena/template/crypsis/template.xml
 
