--- a/src/components/com_kunena/language/de-DE/de-DE.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/de-DE/de-DE.com_kunena.templates.ini
@@ -644,16 +644,16 @@ COM_KUNENA_ACCESS_ALLOWED_ADDATTACH="Anhänge"
 COM_KUNENA_ACCESS_ALLOWED_EDITPOST="Beitrag bearbeiten"
 COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_LABEL="Kategoriebildpfad"
 COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_DESC="Kategoriebildpfad: Wenn du den Pfad auf &bdquo;category_images&ldquo; setzt, dann ist der vollständige Pfad &bdquo;dein_html_rootordner/media/kunena/category_images/&ldquo;"
-; COM_KUNENA_LABELS_QUESTION="Question"
-; COM_KUNENA_LABELS_IMPORTANT="Important"
-; COM_KUNENA_LABELS_IDEA="Idea"
-; COM_KUNENA_LABELS_LOVED="Loved"
-; COM_KUNENA_LABELS_SOLVED="Solved"
-; COM_KUNENA_LABELS_MERGED="Merged"
-; COM_KUNENA_LABELS_DELETED="Deleted"
-; COM_KUNENA_DISABLED="Disabled"
-; COM_KUNENA_ENABLED_TOPIC="Topic id"
-; COM_KUNENA_ENABLED_LABEL="Custom id"
+COM_KUNENA_LABELS_QUESTION="Frage"
+COM_KUNENA_LABELS_IMPORTANT="Wichtig"
+COM_KUNENA_LABELS_IDEA="Idee"
+COM_KUNENA_LABELS_LOVED="Geliebt"
+COM_KUNENA_LABELS_SOLVED="Gelöst"
+COM_KUNENA_LABELS_MERGED="Zusammengeführt"
+COM_KUNENA_LABELS_DELETED="Gelöscht"
+COM_KUNENA_DISABLED="Deaktiviert"
+COM_KUNENA_ENABLED_TOPIC="Themen-ID"
+COM_KUNENA_ENABLED_LABEL="Benutzerdefinierte-ID"
 
 ; JROOT/components/com_kunena/template/crypsis/template.xml
 
