--- a/src/components/com_kunena/language/fr-FR/fr-FR.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/fr-FR/fr-FR.com_kunena.templates.ini
@@ -644,16 +644,16 @@ COM_KUNENA_ACCESS_ALLOWED_ADDATTACH="pour ajouter des pièces jointes."
 COM_KUNENA_ACCESS_ALLOWED_EDITPOST="pour éditer votre message."
 COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_LABEL="Chemin absolu des images de catégorie"
 COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_DESC="Chemin de l'image de catégorie. Si vous définissez le chemin que category_images, le chemin complet sera root / media / kunena / category_images /"
-; COM_KUNENA_LABELS_QUESTION="Question"
-; COM_KUNENA_LABELS_IMPORTANT="Important"
-; COM_KUNENA_LABELS_IDEA="Idea"
-; COM_KUNENA_LABELS_LOVED="Loved"
-; COM_KUNENA_LABELS_SOLVED="Solved"
-; COM_KUNENA_LABELS_MERGED="Merged"
-; COM_KUNENA_LABELS_DELETED="Deleted"
-; COM_KUNENA_DISABLED="Disabled"
-; COM_KUNENA_ENABLED_TOPIC="Topic id"
-; COM_KUNENA_ENABLED_LABEL="Custom id"
+COM_KUNENA_LABELS_QUESTION="Question"
+COM_KUNENA_LABELS_IMPORTANT="Important"
+COM_KUNENA_LABELS_IDEA="Idée"
+COM_KUNENA_LABELS_LOVED="Aimé"
+COM_KUNENA_LABELS_SOLVED="Résolu"
+COM_KUNENA_LABELS_MERGED="Déplacé"
+COM_KUNENA_LABELS_DELETED="Supprimé"
+COM_KUNENA_DISABLED="Désactivé"
+COM_KUNENA_ENABLED_TOPIC="Id du sujet"
+COM_KUNENA_ENABLED_LABEL="Id personalisé"
 
 ; JROOT/components/com_kunena/template/crypsis/template.xml
 
