--- a/src/components/com_kunena/language/ro-RO/ro-RO.com_kunena.controllers.ini
+++ b/src/components/com_kunena/language/ro-RO/ro-RO.com_kunena.controllers.ini
@@ -11,8 +11,8 @@
 
 ; JROOT/components/com_kunena/controllers/announcement.php
 
-COM_KUNENA_ANN_DELETED = "&#536;tergere reu&#537;it&#259;"
-COM_KUNENA_ANN_SUCCESS_ADD = "Ad&#259;ugare cu succes"
+COM_KUNENA_ANN_DELETED = "Anunț șters"
+COM_KUNENA_ANN_SUCCESS_ADD = "Anunț Adăugat"
 COM_KUNENA_ANN_SUCCESS_EDIT = "Editare cu succes"
 COM_KUNENA_ANN_SUCCESS_PUBLISH = "Anuntul '%s' a fost publicat cu success!"
 COM_KUNENA_ANN_SUCCESS_UNPUBLISH = "Anuntul '%s' a fost retras cu success!"
@@ -20,7 +20,7 @@ COM_KUNENA_ANN_SUCCESS_UNPUBLISH = "Anuntul '%s' a fost retras cu success!"
 ; JROOT/components/com_kunena/controllers/category.php
 
 COM_KUNENA_GEN_ALL_MARKED = "Toate mesajele au fost marcate ca citite"
-; COM_KUNENA_GEN_CATEGORY_NAME_UNSUBCRIBED = "You have been unsubscribed from the %s category"
+COM_KUNENA_GEN_CATEGORY_NAME_UNSUBCRIBED = "Ai fost dezabonat de la categoria %s"
 COM_KUNENA_GEN_CATEGORY_SUBCRIBED = "V-a&#539;i abonat la aceast&#259; categorie &#537;i ve&#539;i primi notific&#259;ri prin email despre mesajele noi."
 COM_KUNENA_GEN_FORUM_MARKED = "Toate mesajele &#238;n aceast&#259; categorie au fost marcate ca citite"
 
@@ -57,15 +57,15 @@ COM_KUNENA_POST_STICKY_SET = "The sticky bit has been set for this topic."
 COM_KUNENA_POST_STICKY_UNSET = "The sticky bit has been unset for this topic."
 COM_KUNENA_POST_SUBSCRIBED_TOPIC = "V-a&#539;i abonat la acest subiect."
 COM_KUNENA_POST_SUCCESS_EDIT = "Mesajul a fost editat cu succes."
-COM_KUNENA_POST_SUCCESS_POSTED = "Mesajul t&#259;u a fost trimis cu succes."
+COM_KUNENA_POST_SUCCESS_POSTED = "Mesajul tău a fost trimis cu succes."
 COM_KUNENA_POST_SUCCES_REVIEW = "Mesajul t&#259;u a ap&#259;rut cu succes. &#206;nainte de publicarea pe forum acesta va fi revizuit de un moderator."
 ; COM_KUNENA_POST_TOPIC_FLOOD = "The administrator of this forum has enabled flood protection. You must wait %d seconds before you can make another post."
 COM_KUNENA_POST_UNFAVORITED_TOPIC = "This thread has been removed from your favorites."
 COM_KUNENA_POST_UNSUBSCRIBED_TOPIC = "This thread has been removed from your subscriptions."
-COM_KUNENA_REPORT_FORG0T_SUB_MES = "Ai uitat s&#259; introduci un motiv sau un mesaj."
+COM_KUNENA_REPORT_FORG0T_SUB_MES = "Ai uitat să introduci un motiv sau un mesaj."
 COM_KUNENA_REPORT_MSG = "Mesaj raportat"
-; COM_KUNENA_REPORT_NOT_SEND = "The report can't be sent"
-COM_KUNENA_REPORT_POST_LINK = "Leg&#259;tura mesaj:"
+COM_KUNENA_REPORT_NOT_SEND = "Raportul nu poate fi trimis"
+COM_KUNENA_REPORT_POST_LINK = "Legătura Mesaj:"
 COM_KUNENA_REPORT_POST_MESSAGE = "Mesaje:"
 COM_KUNENA_REPORT_POST_POSTER = "Autor mesaj:"
 COM_KUNENA_REPORT_POST_SUBJECT = "Subiect mesaj:"
@@ -80,22 +80,23 @@ COM_KUNENA_TOPIC_SUCCESS_DELETE = "Subeictul a fost &#537;ters cu succes."
 ; COM_KUNENA_TOPIC_VOTE_CHANGED_SUCCESS = "You have changed your vote!"
 ; COM_KUNENA_TOPIC_VOTE_RESET_SUCCESS = "Votes reseted successfully"
 ; COM_KUNENA_TOPIC_VOTE_SUCCESS = "You have given your vote!"
-; COM_KUNENA_TOPIC_SPAM_LINK_PROTECTION="You have to many links in your message, please decrease it!"
+COM_KUNENA_TOPIC_SPAM_LINK_PROTECTION="Ai prea multe link-uri în mesajul tău, te rugăm să-l reduci!"
+; COM_KUNENA_TOPIC_MESSAGES_ERROR_URL_IN_SUBJECT = "You cannot put an URL in the subject of the topic or message."
 
 ; JROOT/components/com_kunena/controllers/topics.php
 
 COM_KUNENA_BULKMSG_DELETED = "Mesajele au fost &#537;terse cu succes"
-; COM_KUNENA_CONTROLLER_NO_TASK = "No task selected"
-; COM_KUNENA_NO_MESSAGES_SELECTED = "No messages selected"
-; COM_KUNENA_NO_TOPICS_SELECTED = "No topics selected"
+COM_KUNENA_CONTROLLER_NO_TASK = "Nicio sarcină selectată"
+COM_KUNENA_NO_MESSAGES_SELECTED = "Niciun mesaj selectat"
+COM_KUNENA_NO_TOPICS_SELECTED = "Niciun subiect selectat"
 COM_KUNENA_USER_UNFAVORITE_YES = "Ai defavorizat un subiect."
 COM_KUNENA_USER_UNSUBSCRIBE_YES = "A&#539;i fost dezabonat de la subiect."
 
 ; JROOT/components/com_kunena/controllers/user.php
 
 ; COM_KUNENA_ATTACHMENTS_DELETE_FAILED = "Delete attachments has failed"
-; COM_KUNENA_ATTACHMENTS_DELETE_SUCCESSFULLY = "%s attachments have been deleted successfully"
-; COM_KUNENA_ATTACHMENTS_NO_ATTACHMENTS_SELECTED = "You have forgot to select attachments"
+COM_KUNENA_ATTACHMENTS_DELETE_SUCCESSFULLY = "%s atașamente au fost șterse cu succes"
+COM_KUNENA_ATTACHMENTS_NO_ATTACHMENTS_SELECTED = "Ați uitat să selectați atașamente"
 COM_KUNENA_KARMA_DECREASED = "Karma utilizatorului a sc&#259;zut."
 COM_KUNENA_KARMA_INCREASED = "Karma utilizatorului a crescut."
 COM_KUNENA_KARMA_SELF_DECREASE = "Nu &#238;ncerca&#539;i s&#259; v&#259; descre&#537;te&#539;i propria karma!"
@@ -120,4 +121,4 @@ COM_KUNENA_USER_UNBLOCKED_DONE = "Contul utilizatorului activat cu succes."
 ; Removed strings
 
 COM_KUNENA_GEN_CATEGORY_UNSUBCRIBED = "A&#539;i fost dezabonat de la aceast&#259; categorie."
-; COM_KUNENA_POST_ALREADY_SUBSCRIBED_TOPIC = "You have already subscribed to this topic."
+COM_KUNENA_POST_ALREADY_SUBSCRIBED_TOPIC = "Te-ai abonat deja la acest subiect."
